			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03i: *********************************

BUG: (09/26/05, RK) Bug: Node Info dialog has MoCMOS polysilicon resistors width and length swapped. (Bugzilla# 574)

BUG: (09/26/05, RK) Bug: NCC doesn't recogognize MoCMOS polysilicon resistors.
FIX: I made MoCMOS names same as TSMC90 (Bugzilla# 573)

BUG: (09/26/05, RK) I fixed: NCC: Comparing a Cell and its child yields match. (Bugzilla# 571)

BUG: (09/26/05, SMR) New VectorDrawing module doesn't handle complex orientations right.
FIX: In "VectorDrawing.render()", reverse Orientation concatenation.

BUG: (09/26/05, DN) Deleting arcs is too slow (Bug #547)
FIX: Guard some of checkInvariants by "if (Main.getDebug()).

BUG: (09/26/05, DN) GetInfoArc dialog creates "ART_color" variable though nothing was changed.
FIX: In GetInfoArc.doLoadInfo assign "DEFAULT COLOR" to initial value".

BUG: (09/26/05, DN) State bits of nodes and arcs are not Undoable.
FIX: In NodeInst and ArcInst use Undo.modifyNodeInst and Undo.modifyArcInst instead of Undo.otherChanges.

IMP: (09/26/05, DN) Transactional DB: ImmutableElectricObject which stores ImmutableVariables.

IMP: (09/24/05, GVG) Option -v doesn't initialize any GUI stuff so it could run without setting
the DISPLAY variable.

IMP: (09/24/05, GVG) N-Well should be hard to select by default (Bug #368)
Implemented for new nodes created with the TechPalette.

BUG: (09/23/05, DN) Icons should be always be expanded cells/instances (Bug #570)
FIX: In input.JELIB.instantiateCellContents don't use expand flag from disk file, because it is false now.
     Expand bit of NodeInsts will be set either from preferences or from Cell default "getProto().isWantExpanded()".
     Icon cells have "isWantExpanded()=true", so they are expanded by default.

************************* Version 8.03h: *********************************
